<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeleteDataFragment">

    <TextView
        android:id="@+id/my_class_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_class" />

    <RadioGroup
        android:id="@+id/my_class_delete_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/elf_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_elf"
            android:button="@null"
            android:checked="false"
            android:text="@null" />

        <RadioButton
            android:id="@+id/royal_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_royal"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/witch_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_witch"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/dragon_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_dragon"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/necromancer_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_necromancer"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/vampire_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_vampire"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/bishop_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_bishop"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/nemesis_my_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_nemesis"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/my_unspecified_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_neutral"
            android:button="@null"
            android:checked="true"
            android:text="@null" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_deck_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_deck" />

        <EditText
            android:id="@+id/edit_my_deck_delete"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text" />
        <!--android:theme="@style/EditTextColorControl" />-->
    </LinearLayout>

    <TextView
        android:id="@+id/opponent_class_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opponent_class" />

    <RadioGroup
        android:id="@+id/opponent_class_delete_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/elf_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_elf"
            android:button="@null"
            android:checked="false"
            android:text="@null" />

        <RadioButton
            android:id="@+id/royal_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_royal"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/witch_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_witch"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/dragon_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_dragon"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/necromancer_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_necromancer"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/vampire_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_vampire"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/bishop_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_bishop"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/nemesis_opponent_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_nemesis"
            android:button="@null"
            android:text="@null" />

        <RadioButton
            android:id="@+id/opponent_unspecified_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_neutral"
            android:button="@null"
            android:checked="true"
            android:text="@null" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opponent_deck_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opponent_deck" />

        <EditText
            android:id="@+id/edit_opponent_deck_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_range_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/date_range" />

        <Button
            android:id="@+id/button_begin_date_delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:backgroundTint="@color/light_green"
            android:text="@string/unspecified" />

        <TextView
            android:id="@+id/date_while_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/date_while_range" />

        <Button
            android:id="@+id/button_end_date_delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:backgroundTint="@color/light_green"
            android:text="@string/unspecified" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_search_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/white"
        android:backgroundTint="@color/chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>